unpackaged/main/default/objects/Contrats_Conventions__c/Contrats_Conventions__c.object-meta.xml
<CustomObject>
    <label>Contrat/Convention</label>
    <nameField>
        <label>Nom du contrat</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contrats/Conventions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>