unpackaged/main/default/objects/Contrats_Conventions__c/fields/Categorie_de_l_tablissement__c.field-meta.xml
<CustomField>
    <fullName>Categorie_de_l_tablissement__c</fullName>
    <formula>TEXT(Nom_du_client__r.Categories__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catégorie de l&#39;établissement</label>
    <type>Text</type>
</CustomField>