unpackaged/main/default/objects/Contrats_Conventions__c/fields/Collecte_DASRI__c.field-meta.xml
<CustomField>
    <fullName>Collecte_DASRI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collecte DASRI</label>
    <type>Checkbox</type>
</CustomField>