unpackaged/main/default/objects/Contrats_Conventions__c/fields/Date_de_debut__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut__c</fullName>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>