unpackaged/main/default/objects/Contrats_Conventions__c/fields/Date_reelle_de_signature__c.field-meta.xml
<CustomField>
    <fullName>Date_reelle_de_signature__c</fullName>
    <label>Date réelle de signature</label>
    <type>Date</type>
</CustomField>