unpackaged/main/default/objects/Contrats_Conventions__c/fields/Demographie__c.field-meta.xml
<CustomField>
    <fullName>Demographie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Démographie</label>
    <type>Checkbox</type>
</CustomField>