unpackaged/main/default/objects/Contrats_Conventions__c/fields/Domaine_d_application__c.field-meta.xml
<CustomField>
    <fullName>Domaine_d_application__c</fullName>
    <inlineHelpText>Domaine d&#39;application de la remise</inlineHelpText>
    <label>Domaine d&#39;application</label>
    <length>100</length>
    <type>Text</type>
</CustomField>