unpackaged/main/default/objects/Contrats_Conventions__c/fields/Facturation__c.field-meta.xml
<CustomField>
    <fullName>Facturation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facturation</label>
    <type>Checkbox</type>
</CustomField>