unpackaged/main/default/objects/Contrats_Conventions__c/fields/Forfait__c.field-meta.xml
<CustomField>
    <fullName>Forfait__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Par établissement</label>
    <type>Checkbox</type>
</CustomField>