unpackaged/main/default/objects/Contrats_Conventions__c/fields/Horaires_fixes__c.field-meta.xml
<CustomField>
    <fullName>Horaires_fixes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Horaires fixes</label>
    <type>Checkbox</type>
</CustomField>