unpackaged/main/default/objects/Contrats_Conventions__c/fields/Infirmieres_liberales__c.field-meta.xml
<CustomField>
    <fullName>Infirmieres_liberales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infirmières libérales</label>
    <type>Checkbox</type>
</CustomField>