unpackaged/main/default/objects/Contrats_Conventions__c/fields/Logiciel_prelevement_infirmier__c.field-meta.xml
<CustomField>
    <fullName>Logiciel_prelevement_infirmier__c</fullName>
    <label>Logiciel prélèvement infirmier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CBA</fullName>
            </value>
            <value>
                <fullName>PAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>