unpackaged/main/default/objects/Contrats_Conventions__c/fields/Mode_de_collecte__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_collecte__c</fullName>
    <label>Mode de collecte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collecte centralisée plateau technique</fullName>
            </value>
            <value>
                <fullName>Collecte non centralisée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>