unpackaged/main/default/objects/Contrats_Conventions__c/fields/Par_patient__c.field-meta.xml
<CustomField>
    <fullName>Par_patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Par patient</label>
    <type>Checkbox</type>
</CustomField>