unpackaged/main/default/objects/Contrats_Conventions__c/fields/Pr_l_vement_anapath__c.field-meta.xml
<CustomField>
    <fullName>Pr_l_vement_anapath__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs créé dans le cadre du déploiement Activ Medical Lab Begique</description>
    <label>Prélèvement anapath</label>
    <type>Checkbox</type>
</CustomField>