unpackaged/main/default/objects/Contrats_Conventions__c/fields/Prelevement_bacteriologique__c.field-meta.xml
<CustomField>
    <fullName>Prelevement_bacteriologique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prélèvement bactériologique</label>
    <type>Checkbox</type>
</CustomField>