unpackaged/main/default/objects/Contrats_Conventions__c/fields/Prelevement_en_urgence__c.field-meta.xml
<CustomField>
    <fullName>Prelevement_en_urgence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prélèvement en urgence</label>
    <type>Checkbox</type>
</CustomField>