unpackaged/main/default/objects/Contrats_Conventions__c/fields/Preleveurs_etablissement__c.field-meta.xml
<CustomField>
    <fullName>Preleveurs_etablissement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Préleveurs établissement</label>
    <type>Checkbox</type>
</CustomField>