unpackaged/main/default/objects/Contrats_Conventions__c/fields/Preleveurs_internes_CHC__c.field-meta.xml
<CustomField>
    <fullName>Preleveurs_internes_CHC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Préleveurs internes CHC</label>
    <type>Checkbox</type>
</CustomField>