unpackaged/main/default/objects/Contrats_Conventions__c/fields/Ramassage_cabinet__c.field-meta.xml
<CustomField>
    <fullName>Ramassage_cabinet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ramassage cabinet</label>
    <type>Checkbox</type>
</CustomField>