unpackaged/main/default/objects/Contrats_Conventions__c/fields/Reconduction_Tacite__c.field-meta.xml
<CustomField>
    <fullName>Reconduction_Tacite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconduction tacite</label>
    <type>Checkbox</type>
</CustomField>