unpackaged/main/default/objects/Contrats_Conventions__c/fields/Remise_sur_analyses_non_remboursees__c.field-meta.xml
<CustomField>
    <fullName>Remise_sur_analyses_non_remboursees__c</fullName>
    <label>Remise sur analyses non remboursées</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>