unpackaged/main/default/objects/Contrats_Conventions__c/fields/Resultats_mail_fax_serveur__c.field-meta.xml
<CustomField>
    <fullName>Resultats_mail_fax_serveur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Résultats : mail/fax/serveur</label>
    <type>Checkbox</type>
</CustomField>