unpackaged/main/default/objects/Contrats_Conventions__c/fields/Serveur__c.field-meta.xml
<CustomField>
    <fullName>Serveur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serveur</label>
    <type>Checkbox</type>
</CustomField>