unpackaged/main/default/objects/Contrats_Conventions__c/fields/Service_Prestation__c.field-meta.xml
<CustomField>
    <fullName>Service_Prestation__c</fullName>
    <label>Service/Prestation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>