unpackaged/main/default/objects/Contrats_Conventions__c/fields/Source_de_donnees__c.field-meta.xml
<CustomField>
    <fullName>Source_de_donnees__c</fullName>
    <label>Source de données</label>
    <length>255</length>
    <type>Text</type>
</CustomField>