unpackaged/main/default/objects/Contrats_Conventions__c/fields/Type_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>Type_de_contrat__c</fullName>
    <label>Type de contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrat d’établissement</fullName>
            </value>
            <value>
                <fullName>Contrat cadre</fullName>
            </value>
            <value>
                <fullName>AO</fullName>
            </value>
            <value>
                <fullName>Procédure adaptée</fullName>
            </value>
            <value>
                <fullName>Etude clinique</fullName>
            </value>
            <value>
                <fullName>Accord de collaboration</fullName>
                <isActive>false</isActive>
                <label>Accord de collaboration</label>
            </value>
            <value>
                <fullName>Accord de partenariat</fullName>
                <isActive>false</isActive>
                <label>Accord de partenariat</label>
            </value>
            <value>
                <fullName>Contrat de mise à disposition</fullName>
                <isActive>false</isActive>
                <label>Contrat de mise à disposition</label>
            </value>
            <value>
                <fullName>Contrat de partenariat</fullName>
                <isActive>false</isActive>
                <label>Contrat de partenariat</label>
            </value>
            <value>
                <fullName>Contrat logistique</fullName>
                <isActive>false</isActive>
                <label>Contrat logistique</label>
            </value>
            <value>
                <fullName>Contrat prescription connectée</fullName>
                <isActive>false</isActive>
                <label>Contrat prescription connectée</label>
            </value>
            <value>
                <fullName>Contrat prestation de services</fullName>
                <isActive>false</isActive>
                <label>Contrat prestation de services</label>
            </value>
            <value>
                <fullName>Convention de preuve</fullName>
                <isActive>false</isActive>
                <label>Convention de preuve</label>
            </value>
            <value>
                <fullName>Convention de transport</fullName>
                <isActive>false</isActive>
                <label>Convention de transport</label>
            </value>
            <value>
                <fullName>Convention hospitalière</fullName>
                <isActive>false</isActive>
                <label>Convention hospitalière</label>
            </value>
            <value>
                <fullName>Fiche de revue de contrat</fullName>
                <isActive>false</isActive>
                <label>Fiche de revue de contrat</label>
            </value>
            <value>
                <fullName>Mise à disposition de matériel</fullName>
                <isActive>false</isActive>
                <label>Mise à disposition de matériel</label>
            </value>
            <value>
                <fullName>Mise à disposition de véhicule</fullName>
                <isActive>false</isActive>
                <label>Mise à disposition de véhicule</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>