unpackaged/main/default/objects/Contrats_Conventions__c/fields/Type_de_facturation_Cerballiance__c.field-meta.xml
<CustomField>
    <fullName>Type_de_facturation_Cerballiance__c</fullName>
    <label>Type de facturation Cerballiance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forfait</fullName>
            </value>
            <value>
                <fullName>Par patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>