unpackaged/main/default/objects/Contrats_Conventions__c/fields/Urgence_24_24__c.field-meta.xml
<CustomField>
    <fullName>Urgence_24_24__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgence 24/24</label>
    <type>Checkbox</type>
</CustomField>