unpackaged/main/default/objects/Contrats_Conventions__c/fields/Vehicule_mis_a_disposition__c.field-meta.xml
<CustomField>
    <fullName>Vehicule_mis_a_disposition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Véhicule mis à disposition</label>
    <type>Checkbox</type>
</CustomField>