unpackaged/main/default/objects/Contrats_Conventions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nom_du_client__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Statut__c</columns>
    <columns>Icone_Statut__c</columns>
    <columns>Type_de_contrat__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les Contrats</label>
</ListView>